5/00-kabo.deploy-monolitico.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: kabo-mono
  name: kabo-mono
spec:
  replicas: 1
  selector:
    matchLabels:
      run: kabo-mono
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: kabo-mono
    spec:
      containers:
      - image: kanboard/kanboard:v1.2.9
        name: kabo-mono
        ports:
        - containerPort: 80
        resources: {}
status: {}
