5/30-db.deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db
  labels:
    run: db
spec:
  replicas: 1
  selector:
    matchLabels:
      run: db
  template:
    metadata:
      generateName: db
      labels:
        run: db
        version: v0.1
    spec:
      restartPolicy: Always
      containers:
        - name: db
          image: mysql:5.7
          imagePullPolicy: Always
          volumeMounts:
          - name: sql-volume
            mountPath: "/docker-entrypoint-initdb.d/"
          ports:
            - name: db-mysql
              containerPort: 3306
      volumes:
      - configMap:
          name: db-sql
        name: sql-volume
      - name: secret-volume
        secret:
          secretName: db-secret
