5/50-kabo.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: kabo
  name: kabo
spec:
  replicas: 2
  selector:
    matchLabels:
      run: kabo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: kabo
    spec:
      containers:
      - image: kanboard/kanboard:v1.2.9
        name: kabo
        resources: {}
        ports:
          - name: kabo
            containerPort: 80
      volumes:
      - name: secret-volume
        secret:
          secretName: db-secret
status: {}
