5/05-kabo.service-monolitico.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: kabo-mono
  name: kabo-mono
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: kabo-mono
status:
  loadBalancer: {}
