5/60-kabo.service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: kabo
  name: kabo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: kabo
status:
  loadBalancer: {}
