5/70-kabo-ingress-microk8s.yaml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
    name: kabo
  spec:
    rules:
      # - host: maquinola.com.ar
      - http:
          paths:
            - path: /
              backend:
                serviceName: kabo
                servicePort: 80
