5/70-kabo-ingress.yaml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
    name: kabo
  spec:
    rules:
    - host: kabo-carlostaffe.kube.um.edu.ar
      http:
        paths:
        - backend:
            serviceName: kabo
            servicePort: 80
          path: /
